--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -14,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Indie+Flower&display=swap" rel="stylesheet">
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
     <!-- custom css -->
     <link href="css/client.css" rel="stylesheet" />
 </head>
